[package]
name = "slingshot"
version = "0.1.0"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "A lightweight CLI for deploying programs and executing transactions on Aleo."
repository = "https://github.com/d0cd/slingshot.git"
keywords = ["slingshot", "aleo", "cryptography", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography::cryptocurrencies", "operating-systems"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2021"

[features]
default = [ "parallel" ]
parallel = [ "rayon" ]

[lib]
path = "cli/lib.rs"

[[bin]]
name = "slingshot"
path = "cli/main.rs"

[dependencies.snarkos]
# git = "https://github.com/d0cd/snarkOS"
path =  "../slingshot-snarkos"

[dependencies.snarkvm]
version = "0.9.7"
features = ["aleo-cli", "circuit", "console", "parallel"]

[dependencies.anyhow]
version = "1.0"

[dependencies.async-trait]
version = "0.1"

[dependencies.clap]
version = "3.2"
features = ["derive"]

[dependencies.colored]
version = "2"

[dependencies.indexmap]
version = "1.9"
features = [ "rayon" ]

[dependencies.num_cpus]
version = "1"

[dependencies.parking_lot]
version = "0.12"

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.rand_chacha]
version = "0.3.0"
default-features = false

[dependencies.rayon]
version = "1"
optional = true

[dependencies.self_update]
version = "0.32"

[dependencies.serde]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.thiserror]
version = "1.0"

[dependencies.time]
version = "0.3"

[dependencies.tokio]
version = "1.21"
features = ["rt"]

[dependencies.tracing]
version = "0.1"

[dependencies.warp]
version = "0.3"

[dependencies.ureq]
version = "2.5"

[dev-dependencies.rusty-hook]
version = "0.11.2"

[build-dependencies.walkdir]
version = "2"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 2
lto = "thin"
incremental = true

[profile.test]
opt-level = 2
lto = "thin"
incremental = true
debug = true
debug-assertions = true
